# demo_PhenoBrain

./: .gitattributes  .gitignore  README.md  demo.ipynb  pyproject.toml
.jupyter/: jupyter_server_config.py
data/GA4GH/: GA4GH.benchmark_patients.answers.json  GA4GH.benchmark_patients.questions.json  GA4GH_phenopackets.json
data/MME/: MME.benchmark_patients.answers.json  MME.benchmark_patients.questions.json
data/inputs/: GA4GH.benchmark_patients.json  GA4GH_small.json
docs/plans/: 2026-03-31-ensemble-offline-python-design.md  2026-03-31-ensemble-offline-python.md  2026-03-31-multi-baseline-dynamic-ensemble-design.md  2026-03-31-multi-baseline-dynamic-ensemble.md  2026-03-31-subset-ensemble-design.md  2026-03-31-subset-ensemble-offline.md  2026-04-02-cycommon-python-fallback-design.md  2026-04-02-cycommon-python-fallback.md  2026-04-02-uv-minimal-runtime-repair-design.md  2026-04-02-uv-minimal-runtime-repair.md  2026-04-03-additional-baseline-expansion-design.md  2026-04-03-additional-baseline-expansion.md  2026-04-03-cli-parameters-design.md  2026-04-03-cli-parameters.md  2026-04-03-quiet-output-design.md  2026-04-03-quiet-output.md  2026-04-03-result-table-formatting-design.md  2026-04-03-result-table-formatting.md  2026-04-05-boqa-2022-fallback-design.md  2026-04-05-boqa-2022-fallback.md  2026-04-05-boqa-subprocess-quiet-design.md  2026-04-05-boqa-subprocess-quiet.md  2026-04-06-lfs-flatten-diagnosis-dir-design.md  2026-04-06-lfs-flatten-diagnosis-dir.md  2026-04-06-order-stat-outer-ensemble-design.md  2026-04-06-order-stat-outer-ensemble.md  2026-04-07-prune-diagnosis-runtime-scope.md  2026-04-29-benchmark-cli-design.md  2026-04-29-benchmark-cli.md  2026-04-29-ga4gh-benchmark-design.md  2026-04-29-ga4gh-benchmark.md
ralph/: prd.json  progress.txt
results/: ga4gh_benchmark_summary.json
scripts/: benchmark.py  benchmark_ga4gh.py  convert_ga4gh_benchmark.py  run_benchmark.sh  start_jupyter_lab.sh
tests/: test_benchmark_cli.py  test_benchmark_ga4gh.py  test_ga4gh_benchmark_conversion.py  test_jupyter_setup.py  test_pruned_runtime_layout.py
timgroup_disease_diagnosis/: README.md
timgroup_disease_diagnosis/Docker/: openjdk.deb
timgroup_disease_diagnosis/codes/core/core/predict/: model_testor.py
timgroup_disease_diagnosis/codes/core/core/reader/: hpo_reader.py
timgroup_disease_diagnosis/codes/core/core/script/: example_predict_ensemble.py
timgroup_disease_diagnosis/codes/core/core/utils/: cycommon.py  utils.py  utils_tf.py
timgroup_disease_diagnosis/codes/core/tests/: test_boqa_model.py  test_cycommon_fallback.py  test_example_predict_ensemble.py  test_hpo_reader_paths.py  test_nb_model.py  test_order_statistic_multi_model.py  test_prob_model_imports.py  test_python312_compat.py
(+21 files in other folders)
